--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -33,211 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#AUTHID</th>\n",
-       "      <th>STATUS</th>\n",
-       "      <th>sEXT</th>\n",
-       "      <th>sNEU</th>\n",
-       "      <th>sAGR</th>\n",
-       "      <th>sCON</th>\n",
-       "      <th>sOPN</th>\n",
-       "      <th>cEXT</th>\n",
-       "      <th>cNEU</th>\n",
-       "      <th>cAGR</th>\n",
-       "      <th>cCON</th>\n",
-       "      <th>cOPN</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>NETWORKSIZE</th>\n",
-       "      <th>BETWEENNESS</th>\n",
-       "      <th>NBETWEENNESS</th>\n",
-       "      <th>DENSITY</th>\n",
-       "      <th>BROKERAGE</th>\n",
-       "      <th>NBROKERAGE</th>\n",
-       "      <th>TRANSITIVITY</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b7b7764cfa1c523e4e93ab2a79a946c4</td>\n",
-       "      <td>likes the sound of thunder.</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>06/19/09 03:21 PM</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>14861.6</td>\n",
-       "      <td>93.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15661.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b7b7764cfa1c523e4e93ab2a79a946c4</td>\n",
-       "      <td>is so sleepy it's not even funny that's she ca...</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>07/02/09 08:41 AM</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>14861.6</td>\n",
-       "      <td>93.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15661.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>b7b7764cfa1c523e4e93ab2a79a946c4</td>\n",
-       "      <td>is sore and wants the knot of muscles at the b...</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>06/15/09 01:15 PM</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>14861.6</td>\n",
-       "      <td>93.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15661.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>b7b7764cfa1c523e4e93ab2a79a946c4</td>\n",
-       "      <td>likes how the day sounds in this new song.</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>06/22/09 04:48 AM</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>14861.6</td>\n",
-       "      <td>93.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15661.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>b7b7764cfa1c523e4e93ab2a79a946c4</td>\n",
-       "      <td>is home. &lt;3</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>y</td>\n",
-       "      <td>07/20/09 02:31 AM</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>14861.6</td>\n",
-       "      <td>93.29</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>15661.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            #AUTHID  \\\n",
-       "0  b7b7764cfa1c523e4e93ab2a79a946c4   \n",
-       "1  b7b7764cfa1c523e4e93ab2a79a946c4   \n",
-       "2  b7b7764cfa1c523e4e93ab2a79a946c4   \n",
-       "3  b7b7764cfa1c523e4e93ab2a79a946c4   \n",
-       "4  b7b7764cfa1c523e4e93ab2a79a946c4   \n",
-       "\n",
-       "                                              STATUS  sEXT  sNEU  sAGR  sCON  \\\n",
-       "0                        likes the sound of thunder.  2.65   3.0  3.15  3.25   \n",
-       "1  is so sleepy it's not even funny that's she ca...  2.65   3.0  3.15  3.25   \n",
-       "2  is sore and wants the knot of muscles at the b...  2.65   3.0  3.15  3.25   \n",
-       "3         likes how the day sounds in this new song.  2.65   3.0  3.15  3.25   \n",
-       "4                                        is home. <3  2.65   3.0  3.15  3.25   \n",
-       "\n",
-       "   sOPN cEXT cNEU cAGR cCON cOPN               DATE  NETWORKSIZE  BETWEENNESS  \\\n",
-       "0   4.4    n    y    n    n    y  06/19/09 03:21 PM        180.0      14861.6   \n",
-       "1   4.4    n    y    n    n    y  07/02/09 08:41 AM        180.0      14861.6   \n",
-       "2   4.4    n    y    n    n    y  06/15/09 01:15 PM        180.0      14861.6   \n",
-       "3   4.4    n    y    n    n    y  06/22/09 04:48 AM        180.0      14861.6   \n",
-       "4   4.4    n    y    n    n    y  07/20/09 02:31 AM        180.0      14861.6   \n",
-       "\n",
-       "   NBETWEENNESS  DENSITY  BROKERAGE  NBROKERAGE  TRANSITIVITY  \n",
-       "0         93.29     0.03    15661.0        0.49           0.1  \n",
-       "1         93.29     0.03    15661.0        0.49           0.1  \n",
-       "2         93.29     0.03    15661.0        0.49           0.1  \n",
-       "3         93.29     0.03    15661.0        0.49           0.1  \n",
-       "4         93.29     0.03    15661.0        0.49           0.1  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importing the data\n",
-    "my_personality = pd.read_csv('mypersonality_final.csv', encoding = \"ISO-8859-1\")\n",
-    "my_personality.head()"
+    "my_personality = pd.read_csv('mypersonality_final.csv', encoding = \"ISO-8859-1\")"
    ]
   },
   {
@@ -1604,7 +1405,7 @@
     "\n",
     "### General comments an conclusion\n",
     "\n",
-    "One could argue that..."
+    "During this work, we were able to work with basic statistics on statuses and network properties of some Facebook users. This work was, for most of it, an analysis of descrptive statistics. Those elements gave us insight on how it is constructed, however a more complete analysis will come for later assignments. "
    ]
   }
  ],
